--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,10 @@
 # https://www.playframework.com/documentation/latest/Configuration
+play {
+  modules {
+    enabled += "modules.GuiceModule"
+  }
+
+  filters {
+    enabled = []
+  }
+}
